# crowdfund-treasury

./: --address  .gitignore  README.md  cabal.project  crowdfund-treasury.cabal  node.socket
app/: Main.hs
src/: Crowdfund.hs
test-keys/: alice.addr  alice.skey  alice.vkey  bob.addr  bob.skey  bob.vkey  ding.addr  ding.skey  ding.vkey
