cabal-version:      2.4
name:               crowdfund-treasury
version:            1.0.0.0
license:            Apache-2.0
author:             Dinanath 
maintainer:         dkmdkm26@gmail.com

library crowdfund-plutus
  exposed-modules:
    Crowdfund
  hs-source-dirs: src
  build-depends:
      base  -any
    , plutus-tx
    , cardano-api
    , plutus-ledger-api
    , plutus-tx-plugin
    , plutus-core
    , aeson
    , bytestring
    , serialise
    , base16-bytestring
  default-language: Haskell2010

executable SC
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base
    , text
    , kuber
    , aeson
    , cardano-api
    , containers
    , bytestring
    , base16-bytestring
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , crowdfund-plutus
  default-language: Haskell2010